--- a/form/step5.html
+++ b/form/step5.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <div data-layer="confirmar" class="Confirmar" style="width: 1440px; height: 910.41px; padding-bottom: 50px; background: white; box-shadow: 0px 2px 6px rgba(23, 15, 73, 0.16); border-radius: 50px; overflow: hidden; flex-direction: column; justify-content: flex-start; align-items: center; gap: 50px; display: inline-flex">
@@ -54,11 +57,8 @@
                 <div data-layer="Rectangle 4345" class="Rectangle4345" style="width: 29.36px; height: 29.36px; left: 128px; top: 32.87px; position: absolute; opacity: 0.50; background: #9E96FF; border-radius: 10px"></div>
                 <div data-layer="Rectangle 4344" class="Rectangle4344" style="width: 31.53px; height: 31.53px; left: 0px; top: 74.87px; position: absolute; opacity: 0.50; background: #DEDBFF; border-radius: 8px"></div>
                 <div data-layer="Rectangle 4346" class="Rectangle4346" style="width: 36.59px; height: 36.59px; left: 114.29px; top: 106.82px; position: absolute; opacity: 0.50; background: #DEDBFF; border-radius: 8px"></div>
-                <div data-layer="clock" class="Clock" style="width: 120px; height: 120px; left: 23.48px; top: 18.38px; position: absolute">
-                  <div data-layer="Ellipse 446" class="Ellipse446" style="width: 120px; height: 120px; left: 0px; top: 0px; position: absolute; background: #7021EB; border-radius: 9999px"></div>
-                  <div data-layer="wait" class="Wait" style="width: 87px; height: 82px; left: 16.20px; top: 17.62px; position: absolute; justify-content: center; align-items: center; display: inline-flex">
-                    <div data-layer="path" class="Path" style="width: 87px; height: 82px; background: white"></div>
-                  </div>
+                <div data-layer="clock" class="Clock" style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); display: flex; justify-content: center; align-items: center;">                  
+                  <i class="bi bi-clock-history"style="color: primary; font-size: 5rem;"></i>
                 </div>
               </div>
             </div>
