--- a/form/step2.html
+++ b/form/step2.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div data-layer="Step 2" class="Step2" style="width: 1440px; height: 1051px; background: white;  overflow: hidden; flex-direction: column; justify-content: flex-start; align-items: center; gap: 50px; display: inline-flex">
+    <div data-layer="Step 2" class="Step2" style="width: 1440px; height: 1051px; background: white;  overflow: hidden; flex-direction: column; justify-content: center; align-items: center; gap: 50px; display: inline-flex">
       <div data-layer="wrapper" class="Wrapper" style="align-self: stretch; height: 93px; background: white; box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.25); flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: flex; position: fixed; top: 0; width: 100%; z-index: 1000;">
         <div data-layer="header" class="Header" style="align-self: stretch; height: 93px; padding-right: 86px; padding-top: 14px; padding-bottom: 14px; background: white; justify-content: space-between; align-items: center; display: inline-flex">
           <div data-layer="logo" class="Logo" style="width: 259.50px; padding-left: 14px; padding-right: 14px; flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
@@ -62,22 +62,25 @@
             </div>
             <form data-layer="form" class="Form" style="align-self: stretch; height: 86px; padding-left: 19px; padding-right: 19px; flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: flex">
               <div data-layer="direccion" class="Direccion" style="flex-direction: column; justify-content: center; align-items: center; gap: 15px; display: flex">
-                <div data-layer="input_direccion" class="InputDireccion" style="height: 38px; flex-direction: column; justify-content: center; align-items: center; gap: 4px; display: flex">
-                  <input data-layer="input" class="Input" style="align-self: stretch; height: 38px; padding-left: 14px; padding-right: 14px; padding-top: 10px; padding-bottom: 10px; border-radius: 8px; border: 1px #E5E7EB solid; flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: flex" type="text" placeholder="Ingrese la dirección">
+                <div data-layer="input_direccion" class="InputDireccion" style="height: 38px; flex-direction: column; justify-content: center; align-items: center; gap: 4px; display: flex">                  
+                  <input type="text" data-layer="input" class="Input" style="width: 400px; padding-left: 12px; padding-right: 12px; padding-top: 10px; padding-bottom: 10px; border-radius: 43px; border: 1px #E5E7EB solid; justify-content: space-between; align-items: center; display: inline-flex" placeholder="Ingrese la dirección">                  
                 </div>
               </div>
               <div data-layer="idea" class="Idea" style="height: 38px; flex-direction: column; justify-content: center; align-items: center; gap: 15px; display: flex">
-                <div data-layer="select_idea" class="SelectIdea" style="height: 38px; flex-direction: column; justify-content: center; align-items: center; gap: 4px; display: flex">
-                  <select data-layer="idea1" class="Idea1" style="height: 38px; padding-left: 14px; padding-right: 14px; padding-top: 10px; padding-bottom: 10px; border-radius: 8px; border: 1px #E5E7EB solid; flex-direction: column; justify-content: center; align-items: center; gap: 10px; display: flex">
-                    <option value="">Idea autocompletado</option>
-                    <!-- Additional options can be added here -->
-                  </select>
+                <div data-layer="select_idea" class="SelectIdea" style="height: 38px; flex-direction: column; justify-content: center; align-items: center; gap: 4px; display: flex">                  
+                  <select data-layer="idea1" class="Input" style="width: 370px; padding-left: 12px; padding-right: 12px; padding-top: 10px; padding-bottom: 10px; border-radius: 43px; border: 1px #E5E7EB solid; justify-content: space-between; align-items: center; display: inline-flex">
+                    <option value="">Seleccione</option>
+                    <option value="">Seleccione</option>
+                    <option value="">Seleccione</option>
+                    <option value="">Seleccione</option>
+                    <option value="">Seleccione</option>                    
+                  </select>   
                 </div>
               </div>
             </form>
             <div data-layer="mapa" class="Mapa" style="width: 648px; height: 285px; padding-left: 30px; padding-right: 30px; border-radius: 16px; overflow: hidden; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               <div data-layer="iframe_mapa" class="IframeMapa" style="width: 648px; height: 282px; position: relative">
-                <img data-layer="render" class="Render" style="width: 648px; height: 282px; left: 0px; top: 0px; position: absolute" src="https://via.placeholder.com/648x282" />
+                <img data-layer="render" class="Render" style="width: 648px; height: 282px; left: 0px; top: 0px; position: absolute" src="..\tools\image.png">
                 <div data-layer="puntero" class="Puntero" style="width: 21px; height: 29px; left: 303px; top: 155.50px; position: absolute; border: 1px #8DFF00 solid"></div>
               </div>
             </div>
