Mapa de ejemplo

--- a/form/step2.html
+++ b/form/step2.html
@@ -80,7 +80,7 @@
             </form>
             <div data-layer="mapa" class="Mapa" style="width: 648px; height: 285px; padding-left: 30px; padding-right: 30px; border-radius: 16px; overflow: hidden; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
               <div data-layer="iframe_mapa" class="IframeMapa" style="width: 648px; height: 282px; position: relative">
-                <img data-layer="render" class="Render" style="width: 648px; height: 282px; left: 0px; top: 0px; position: absolute" src="..\tools\image.png">
+                <img data-layer="render" class="Render" style="width: 648px; height: 282px; left: 0px; top: 0px; position: absolute" src="..\tools\mapa_ejemplo.png">
                 <div data-layer="puntero" class="Puntero" style="width: 21px; height: 29px; left: 303px; top: 155.50px; position: absolute; border: 1px #8DFF00 solid"></div>
               </div>
             </div>
